[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomdoo-locks-base"
version = "0.1.0"
description = "Contrato base para librerías de integración con smart locks de Roomdoo"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["roomdoo_locks_base*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.11.0", "pre-commit>=4.0"]
