[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomdoo-locks-salto"
version = "0.1.0"
description = "Salto provider for Roomdoo smart lock integrations"
requires-python = ">=3.10"
dependencies = [
    "roomdoo-locks-base",
    "requests>=2.28",
    "tzdata",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["roomdoo_locks_salto*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "responses>=0.25.0"]
